--- a/styles/styles.css
+++ b/styles/styles.css
@@ -252,11 +252,12 @@ div.community{
 div.community>div.glyphs{
     position: absolute;
     display: block;
-    margin-left: 1100px;
-    margin-top: 90px;
+    left: 1233px;
+    top: 1891px;
     color: black;
-    font-size: 26px;
-    letter-spacing: 24px;
+    font-size: 28px;
+    font-weight: 700;
+    letter-spacing: 18px;
 }
 div.community-inner{    
     margin-top: 120px;
